src/bls/include/bls/bls.hpp

class SecretKey;
class PublicKey;
class Signature;
class Id;